fixed column alignment

--- a/src/scss/base/_globalClasses.scss
+++ b/src/scss/base/_globalClasses.scss
@@ -3,5 +3,9 @@
 }
 
 .is-flex{
-  display: flex; 
+  display: flex;
+}
+
+.no-margin{
+  margin: 0px; 
 }
